--- a/README
+++ b/README
@@ -46,14 +46,18 @@ Description of modules
 =======
 
 - recipes-connecivity/mosquitto - MQTT broker
+- recipes-core/psplash - Startup logo
+- recipes-graphics/xorg-lib - Fix original recipe issue: allow rdepend on libxkbcommon-x11 module. Slint depend on this module
 - recipes-kernel/linux - patched DTS in mainline linux for activate UART4 for CO2 sensor
 - recipes-python/python3-co2-sensor-daemon - Python application to read sensors data and send it to MQTT broker
 -               /python3-mhz19 - Python module for interact with MH-Z19 CO2 sensor.
                                  Pathed in order to get rid of RPI dependencies.
 - recipes-rust/htu21d-daemon - Rust daemon for TE HTU21D relative humidity and temperature sensor.
                                Get data from sensor and send it to MQTT broker
--             /slint-gui - GUI for meteostation based on Slint - Rust GUI framework
-- recipes-sato/matchbox-sato - custom session for Matchbox desktop manager to startup main GUI
+-             /slint-gui - GUI for meteostation based on Slint - Rust GUI framework, fetch data from MQTT broker
+-             /weather-fetcher - Weather data provider, send data to MQTT broker
+- recipes-sato/matchbox-sato - Custom session for Matchbox desktop manager to startup main GUI
+- recipes-support/ntp - Configure NTP service in order to have real time in system. Need for HTTPS requests.
 
 
 HOW TO USE
@@ -76,10 +80,9 @@ HOW TO USE
   # mandatory:
   MACHINE ??= "cubieboard"
   MACHINEOVERRIDES .= ":use-mailine-graphics"
-  XSERVER:append = " xf86-video-modesetting"
-  LICENSE_FLAGS_ACCEPTED = "commercial license"
+  DISTRO = "cubieboard-meteo"
 
-  # optional and build hardware dependent
+  # optional and depends on build hardware
   BB_NUMBER_THREADS = "4"
   BB_NUMBER_PARSE_THREADS = "8"
   PARALLEL_MAKE = "-j 2"
@@ -87,8 +90,8 @@ HOW TO USE
   INHERIT += "rm_work"
 
 3. Build: bitbake core-image-meteo
-4. Write image on SD card (/dev/sdb):
-sudo dd bs=4M if=/home/user/work2/yocto/sunxi-meteo-build/tmp/deploy/images/cubieboard/core-image-meteo-cubieboard.sunxi-sdimg of=/dev/sdb status=progress && sync /dev/sdb
+4. Write image on SD card (/dev/sd<X>):
+sudo dd bs=4M if=<path to image build directory>/tmp/deploy/images/cubieboard/core-image-meteo-cubieboard.sunxi-sdimg of=/dev/sd<X> status=progress && sync /dev/sd<X>
 5. Insert SD card to Cubieboard, connect to LAN, Power ON
 TODO: how to look MQTT data from broker
 
