--- a/README
+++ b/README
@@ -47,6 +47,7 @@ Description of modules
 
 - recipes-connecivity/mosquitto - MQTT broker
 - recipes-core/psplash - Startup logo
+-             /base-files - For rotating startup logo verticaly
 - recipes-extended/timezone - Setup timezone in system
 - recipes-graphics/xorg-lib - Fix original recipe issue: include libxkbcommon-x11 module when rdepend on libxkbcommon.
                               Slint depends on this module libxkbcommon-11
