--- a/README
+++ b/README
@@ -7,18 +7,18 @@ Hardware:
  - CO2 sensor - MH-Z19b
  - Temperature and Relative Humidiy sensor - HTU21D
  - Display - 7 inch IPS LCD Wisecoco 1024x600, HDMI, USB touch
- - TODO: WIFI
+ - Support USB WIFI RTL8821CU
 
 TODO: Scheme of hardware connections
 
 Software:
- - Yocto linux, based on core image Sato
- - mainline kernel
+ - Yocto linux, based on core image
+ - mainline kernel + patched DTS + enabled Cedrus video driver
  - mainline U-boot
  - MH-Z19b CO2 sensor daemon (python3)
  - MQTT broker - Mosquitoo
  - HTU21D Temperature and Relative Humidiy sensor daemon (rust)
- - Graphics - Slint GUI (rust)
+ - Graphics - Slint GUI (rust) + gstreamer
 
 
 meta-meteo layer
@@ -40,7 +40,8 @@ Dependencies
   - meta-networking
   meta-sunxi        https://github.com/linux-sunxi/meta-sunxi       "kirkstone"
   meta-rust-bin     https://github.com/rust-embedded/meta-rust-bin  "master"
-
+  (optional for support USB WIFI RTL8821CU)
+  meta-rtlwifi https://github.com/EmbeddedAndroid/meta-rtlwifi  "master"
 
 Description of modules
 =======
@@ -51,7 +52,8 @@ Description of modules
 - recipes-extended/timezone - Setup timezone in system
 - recipes-graphics/xorg-lib - Fix original recipe issue: include libxkbcommon-x11 module when rdepend on libxkbcommon.
                               Slint depends on this module libxkbcommon-11
-- recipes-kernel/linux - patched DTS in mainline linux for activate UART4 for CO2 sensor
+- recipes-kernel/linux - Patched DTS in mainline linux for activate UART4 for CO2 sensor. Enabled Cedar video driver for hardware video decoding.
+- recipes-multimedia/gstreamer - Required gstreamer plugins for video converting and decoding
 - recipes-python/co2-sensor-daemon - Python application to read sensors data and send it to MQTT broker
 -               /python3-mhz19 - Python module for interact with MH-Z19 CO2 sensor.
                                  Pathed in order to get rid of RPI dependencies.
@@ -59,8 +61,8 @@ Description of modules
                                Get data from sensor and send it to MQTT broker
 -             /slint-gui - GUI for meteostation based on Slint - Rust GUI framework, fetch data from MQTT broker
 -             /weather-provider - Weather data provider, send data to MQTT broker
-- recipes-sato/matchbox-sato - Custom session for Matchbox desktop manager to startup main GUI
-- recipes-support/ntp - Configure NTP service in order to have real time in system. Need for HTTPS requests.
+- recipes-support/ntp - Configure NTP service in order to have real time in system. Need for HTTPS requests
+-                /ntp-waiter - Service for waiting for NTP service synchronization.
 
 
 HOW TO USE
@@ -78,6 +80,8 @@ HOW TO USE
   /home/user/work2/yocto/my_layers/meta-meteo \
   /home/user/work2/yocto/my_layers/meta-rust-bin \
   "
+  # optional for support USB WIFI RTL8821CU:
+  /home/user/work2/yocto/my_layers/meta-rtlwifi \
 
 2. Add to local.conf
   # mandatory:
@@ -85,6 +89,8 @@ HOW TO USE
   MACHINEOVERRIDES .= ":use-mailine-graphics"
   DISTRO = "cubieboard-meteo"
   LICENSE_FLAGS_ACCEPTED = "commercial license"
+  WIFI_SSID ?= "your wifi SSID"
+  WIFI_PASS ?= "your wifi password key" # use wpa_passphrase to generate key
 
   # optional and depends on build hardware
   BB_NUMBER_THREADS = "4"
@@ -93,9 +99,13 @@ HOW TO USE
   PARALLEL_MAKEINST = "-j 2"
   INHERIT += "rm_work"
 
+  # optional for support USB WIFI RTL8821CU:
+  DISTRO = "cubieboard-meteo-rtl8821cu"
+
+  # optional for set your video streem, should be encoded with h264
+  OUTDOOR_VIDEO_URI = "video streem URL"
+
 3. Build: bitbake core-image-meteo
 4. Write image on SD card (/dev/sd<X>):
 sudo dd bs=4M if=<path to image build directory>/tmp/deploy/images/cubieboard/core-image-meteo-cubieboard.sunxi-sdimg of=/dev/sd<X> status=progress && sync /dev/sd<X>
-5. Insert SD card to Cubieboard, connect to LAN, Power ON
-
-
+5. Insert SD card to Cubieboard, Power ON
